--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-dev": "firebase deploy --project meanas-dev",
+    "deploy-prod":"firebase deploy --project meanas-prod"
+
   },
   "eslintConfig": {
     "extends": [
