--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.4",
     "firebase-admin": "^12.3.0",
     "isexe": "^3.1.1",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -26,8 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy-dev": "firebase deploy --project meanas-dev",
-    "deploy-prod":"firebase deploy --project meanas-prod"
-
+    "deploy-prod": "firebase deploy --project meanas-prod"
   },
   "eslintConfig": {
     "extends": [
