--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-OPENAI_API_KEY="your-openai-api-key"
-FIREBASE_STORAGE_BUCKET="meanas-692aa.appspot.com"
+GOOGLE_API_KEY=your-google-api-key
 PORT=5000
+FIREBASE_STORAGE_BUCKET="meanas-692aa.appspot.com"
+
