--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase": "^10.12.4",
+    "firebase": "^10.13.0",
     "firebase-admin": "^12.3.0",
     "isexe": "^3.1.1",
     "jspdf": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "openai": "^4.56.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
     "readline": "^1.3.0",
